force-app/main/default/objects/Project_Delivery_Schedule_Item__c/Project_Delivery_Schedule_Item__c.object-meta.xml
<CustomObject>
    <description
  >Allows users to specify a date and a dollar amount for individual project items delivered.</description>
    <label>Project Delivery Schedule Item</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Schedule Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Delivery Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>