force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description
  >This is the dollar amount delivered in this delivery schedule item.</description>
    <inlineHelpText
  >This is the dollar amount delivered in this delivery schedule item.</inlineHelpText>
    <label>Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>