force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Approved_by__c</fullName>
    <description
  >Date/Time the record was approved and the user that clicked it.</description>
    <inlineHelpText
  >Date/Time the record was approved and the user that clicked it.</inlineHelpText>
    <label>Approved by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>