force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description
  >Choose the income or expense category for this item.</description>
    <inlineHelpText
  >Choose the income or expense category for this item.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CDE Custom Event</fullName>
            </value>
            <value>
                <fullName>CDE Custom Media</fullName>
            </value>
            <value>
                <fullName>CDE Custom Video</fullName>
            </value>
            <value>
                <fullName>CDE Demand Gen</fullName>
            </value>
            <value>
                <fullName>CDE Digital Marketing</fullName>
            </value>
            <value>
                <fullName>CDE Research</fullName>
            </value>
            <value>
                <fullName>CDE Webinar</fullName>
            </value>
            <value>
                <fullName>GOV Custom Event</fullName>
            </value>
            <value>
                <fullName>GOV Custom Media</fullName>
            </value>
            <value>
                <fullName>GOV Demand Gen</fullName>
            </value>
            <value>
                <fullName>GOV Digital Marketing</fullName>
            </value>
            <value>
                <fullName>GOV Research</fullName>
            </value>
            <value>
                <fullName>GOV Webinar</fullName>
            </value>
            <value>
                <fullName>GT Custom Event</fullName>
            </value>
            <value>
                <fullName>GT Custom Media</fullName>
            </value>
            <value>
                <fullName>GT Custom Video</fullName>
            </value>
            <value>
                <fullName>GT Demand Gen</fullName>
            </value>
            <value>
                <fullName>GT Digital Marketing</fullName>
            </value>
            <value>
                <fullName>GT Research</fullName>
            </value>
            <value>
                <fullName>GT Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>