force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>For tracking Digital Marketing deliverables.</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDE - Higher Education</fullName>
            </value>
            <value>
                <fullName>CDE - Home Page</fullName>
            </value>
            <value>
                <fullName>CDE - K-12</fullName>
            </value>
            <value>
                <fullName>CDE - ROS</fullName>
            </value>
            <value>
                <fullName>EM - Disaster</fullName>
            </value>
            <value>
                <fullName>EM - Home Page</fullName>
            </value>
            <value>
                <fullName>EM - Preparedness</fullName>
            </value>
            <value>
                <fullName>EM - ROS</fullName>
            </value>
            <value>
                <fullName>EM - Safety</fullName>
            </value>
            <value>
                <fullName>EM - Site</fullName>
            </value>
            <value>
                <fullName>GOV - AI</fullName>
            </value>
            <value>
                <fullName>GOV - Community</fullName>
            </value>
            <value>
                <fullName>GOV - Home Page</fullName>
            </value>
            <value>
                <fullName>GOV - Infrastructure</fullName>
            </value>
            <value>
                <fullName>GOV - Policy</fullName>
            </value>
            <value>
                <fullName>GOV - Politics</fullName>
            </value>
            <value>
                <fullName>GOV - Resilience</fullName>
            </value>
            <value>
                <fullName>GOV - ROS</fullName>
            </value>
            <value>
                <fullName>GOV - The Future Of Finance</fullName>
            </value>
            <value>
                <fullName>GOV - The Future Of Security</fullName>
            </value>
            <value>
                <fullName>GOV - The Future Of Work</fullName>
            </value>
            <value>
                <fullName>GOV - Transportation</fullName>
            </value>
            <value>
                <fullName>GT - AI</fullName>
            </value>
            <value>
                <fullName>GT - Broadband/Network</fullName>
            </value>
            <value>
                <fullName>GT - Budget and Finance</fullName>
            </value>
            <value>
                <fullName>GT - Civic</fullName>
            </value>
            <value>
                <fullName>GT - Cloud &amp; Computing</fullName>
            </value>
            <value>
                <fullName>GT - CyberSecurity</fullName>
            </value>
            <value>
                <fullName>GT - Emerging Tech</fullName>
            </value>
            <value>
                <fullName>GT - Government Experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>