force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <formula>Project__r.Client__r.Name</formula>
    <label>Client Account</label>
    <type>Text</type>
</CustomField>