force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Completion_Date_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_Adjusted__c</fullName>
    <description
  >Used in List View for Project Delivery Schedule. Pulls Project&apos;s &quot;Completion Date Adjusted&quot; field data.</description>
    <formula>Project__r.Completion_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Date (Adjusted)</label>
    <type>Date</type>
</CustomField>