force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Date_2__c.field-meta.xml
<CustomField>
    <fullName>Date_2__c</fullName>
    <description
  >Formula that shows the date again, for use in reporting.</description>
    <formula>Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Formula that shows the date again, for use in reporting.</inlineHelpText>
    <label>Date (2)</label>
    <type>Date</type>
</CustomField>