force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The date that this schedule item was delivered.</description>
    <inlineHelpText
  >The date that this schedule item was delivered.</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>