force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>