force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Date_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Date_Quarter__c</fullName>
    <formula>CEILING( MONTH (  Date__c  ) / 3 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date (Quarter)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>