force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Delivery_Placement__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Placement__c</fullName>
    <label>Delivery Placement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adhesion - 320x100</fullName>
            </value>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>Beyond the Booth</fullName>
            </value>
            <value>
                <fullName>Big Box - 640x480</fullName>
            </value>
            <value>
                <fullName>Billboard - 970x250</fullName>
            </value>
            <value>
                <fullName>Blended Banners</fullName>
            </value>
            <value>
                <fullName>Custom Email</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Emergency Management</fullName>
            </value>
            <value>
                <fullName>Future of Finance</fullName>
            </value>
            <value>
                <fullName>Governing Daily</fullName>
            </value>
            <value>
                <fullName>GovTech Today</fullName>
            </value>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>K-12</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Microsite</fullName>
            </value>
            <value>
                <fullName>Rectangle - 300x250</fullName>
            </value>
            <value>
                <fullName>Resource Module</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Takeover</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>