force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Delivery_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status_Notes__c</fullName>
    <description>For tracking Digital Marketing deliverables.</description>
    <label>Delivery Status / $$ Notes</label>
    <type>TextArea</type>
</CustomField>