force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description
  >This is the description of this delivery schedule item.</description>
    <label>Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>