force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Edit__c.field-meta.xml
<CustomField>
    <fullName>Edit__c</fullName>
    <formula
  >HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/e?retURL=%2F&quot;&amp;Id, &quot;Edit&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit</label>
    <type>Text</type>
</CustomField>