force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>For tracking Digital Marketing deliverables.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>