force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <formula>Project__r.Event__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Id</label>
    <type>Text</type>
</CustomField>