force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expense_Amount__c</fullName>
    <description>Line item for an expense for this project.</description>
    <inlineHelpText>Line item for an expense for this project.</inlineHelpText>
    <label>Expense Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>