force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>Expense_Category__c</fullName>
    <description>The category for this expense line item.</description>
    <inlineHelpText>The category for this expense line item.</inlineHelpText>
    <label>Expense Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7Knots</fullName>
            </value>
            <value>
                <fullName>Contractor / Telemarketing</fullName>
            </value>
            <value>
                <fullName>Distribution Cost</fullName>
            </value>
            <value>
                <fullName>Event Expense</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
            <value>
                <fullName>Moderator Fee</fullName>
            </value>
            <value>
                <fullName>PDF only</fullName>
            </value>
            <value>
                <fullName>Photographer Filed</fullName>
            </value>
            <value>
                <fullName>Printing Cost</fullName>
            </value>
            <value>
                <fullName>Senior Fellow</fullName>
            </value>
            <value>
                <fullName>Video Production</fullName>
            </value>
            <value>
                <fullName>Webinar Hosting Fee</fullName>
            </value>
            <value>
                <fullName>Writer Fee</fullName>
            </value>
            <value>
                <fullName>Writing in house</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>