force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Guarantee__c</fullName>
    <label>Guarantee</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>