force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Income_Category__c.field-meta.xml
<CustomField>
    <fullName>Income_Category__c</fullName>
    <label>Income Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>FINAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>