force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description
  >Invoice number for the invoice that corresponds to this expense line.</description>
    <inlineHelpText
  >Invoice number for the invoice that corresponds to this expense line.</inlineHelpText>
    <label>Invoice Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>