force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description
  >Displays the first day of the month for reporting.</description>
    <formula>DATE(
  YEAR(Date__c),
  MONTH(Date__c),
  1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Displays the first day of the month for reporting.</inlineHelpText>
    <label>Month</label>
    <type>Date</type>
</CustomField>