force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Moved_to_Final__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_Final__c</fullName>
    <inlineHelpText
  >Date the Income Category field changed to &quot;FINAL&quot;</inlineHelpText>
    <label>Moved to Final</label>
    <type>Date</type>
</CustomField>