force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>For tracking Digital Marketing deliverables.</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>