force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Pending - Project Manager has not approved the expense.  
Approved - Project Manager has approved this expense and Accounts Payable can process payment.</description>
    <inlineHelpText>Pending - Project Manager has not approved the expense.  
Approved - Project Manager has approved this expense and Accounts Payable can process payment.</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>