force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/PM_Date__c.field-meta.xml
<CustomField>
    <fullName>PM_Date__c</fullName>
    <description
  >Used in List View to see the date of last PM note on Project</description>
    <formula>Project__r.PM_Note_Last_Updated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Date</label>
    <type>Text</type>
</CustomField>