force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/PM_Note__c.field-meta.xml
<CustomField>
    <fullName>PM_Note__c</fullName>
    <formula>Project__r.Project_Update_Note__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Note</label>
    <type>Text</type>
</CustomField>