force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description
  >Enter the PO Number that corresponds with this expense.</description>
    <inlineHelpText
  >Enter the PO Number that corresponds with this expense.</inlineHelpText>
    <label>PO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>