force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description
  >This is the parent project over all of the line items in this delivery schedule.</description>
    <label>Project</label>
    <referenceTo>SFL5_Projects__c</referenceTo>
    <relationshipLabel>Project Delivery Schedule</relationshipLabel>
    <relationshipName>Project_Delivery_Schedule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>