force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner__c</fullName>
    <formula
  >Project__r.Project_Owner__r.FirstName &amp; &quot; &quot; &amp;  Project__r.Project_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner</label>
    <type>Text</type>
</CustomField>