force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Project_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Email__c</fullName>
    <description
  >Receives the email address of the Project Owner every time a record is edited and the Project Owner is not blank</description>
    <label>Project Owner Email</label>
    <type>Email</type>
</CustomField>