force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>For tracking Digital Marketing deliverables.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Creative Received</fullName>
            </value>
            <value>
                <fullName>Creative Pending</fullName>
            </value>
            <value>
                <fullName>Content Studio</fullName>
            </value>
            <value>
                <fullName>Stalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>