force-app/main/default/objects/Project_Delivery_Schedule_Item__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description
  >Enter in the Target for a certain time period and category.  Example: $215,000, 1/1/2014, GT Custom Media.  Used for reporting only.</description>
    <inlineHelpText
  >Enter in the Target for a certain time period and category.  Example: $215,000, 1/1/2014, GT Custom Media.  Used for reporting only.</inlineHelpText>
    <label>Target</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>