force-app/main/default/objects/Project_Delivery_Schedule_Item__c/recordTypes/Custom_Media.recordType-meta.xml
<RecordType>
    <fullName>Custom_Media</fullName>
    <active>true</active>
    <description>Project Delivery Schedule Items for Custom Media</description>
    <label>Custom Media</label>
</RecordType>