force-app/main/default/objects/Project_Delivery_Schedule_Item__c/recordTypes/Research.recordType-meta.xml
<RecordType>
    <fullName>Research</fullName>
    <active>true</active>
    <description
  >Project Delivery Schedule Items for Research projects.</description>
    <label>Research</label>
</RecordType>