force-app/main/default/objects/Project_Delivery_Schedule_Item__c/validationRules/Cannot_Approve_an_Already_Approved_Item.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Approve_an_Already_Approved_Item</fullName>
    <active>true</active>
    <description
  >Prevents people from accidentally using the &quot;Approve for Payment&quot; button on expenses that have already been approved or processed.</description>
    <errorConditionFormula>OR(
  ISPICKVAL( Payment_Status__c, &quot;Pending&quot;)
  &amp;&amp;
  (TEXT(PRIORVALUE(Payment_Status__c)) = &quot;Approved&quot;
  ||
  TEXT(PRIORVALUE(Payment_Status__c)) = &quot;Processed&quot;
  )
,
  ISPICKVAL( Payment_Status__c, &quot;Approved&quot;)
  &amp;&amp;
  TEXT(PRIORVALUE(Payment_Status__c)) = &quot;Processed&quot;
,
  $User.Id &lt;&gt; &apos;00530000003biB7&apos; /*Rebecca Johnson*/
  &amp;&amp;
  ISPICKVAL( Payment_Status__c , &quot;Approved&quot;)
  &amp;&amp;
  NOT(ISCHANGED(Payment_Status__c))
  &amp;&amp;
  NOT(ISCHANGED( Date__c ))
,
  $User.Id &lt;&gt; &apos;00530000003biB7&apos; /*Rebecca Johnson*/
  &amp;&amp;
  ISPICKVAL( Payment_Status__c , &quot;Processed&quot;)
  &amp;&amp;
  NOT(ISCHANGED(Payment_Status__c))
  &amp;&amp;
  NOT(ISCHANGED( Date__c ))
)
&amp;&amp;
 $User.Id &lt;&gt; &apos;005a0000007Wamb&apos; /* Jeff Fahndrich to allow quick edits */</errorConditionFormula>
    <errorMessage
  >This has already been Approved or Processed. Please contact Accounts Payable regarding changes, if needed.</errorMessage>
</ValidationRule>